snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1.jar.sha512
df5157ae7cc55e8920bf2debf0e18f102bd605c36fdba1482f08c117b4198c5279536efe8a1cff3bca451919a208804aa5909169d73cf56625c9bf43b63d01ac